Initial commit: Website for BlockChain on Campus

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,11 +1,12 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "BCC",
+  "name": "BlockChain on Campus - Simplifying Blockchain Education",
+  "description": "A student-focused blockchain education community making Web3 concepts simple, practical, and accessible",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "logo-short.png",
       "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "type": "image/png"
     },
     {
       "src": "logo192.png",
@@ -20,6 +21,6 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#000000",
+  "theme_color": "#0FA958",
   "background_color": "#ffffff"
 }
